<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_rating_calculate_action">Calculate rating</string>
    <string name="account_rating_calculate_action_progress">@string/please_wait</string>
    <string name="account_rating_not_loaded_message">Your rating is not loaded, swipe down to refresh :)</string>
    <string name="account_rating_postfix_pattern">/[amount] stars</string>
    <string name="account_rating_rewards_title">Rewards</string>
    <string name="account_rating_stars_for_activity_title">Stars for activity</string>
    <string name="account_rating_stars_for_profile_title">Stars for profile</string>
    <string name="account_rating_title">"Account
rating"</string>
    <string name="act_app_hacked_cloned_description">There is no need in cloning the application. You can try \"Bundle\" to use multiple accounts instead [emoji:WINKING_FACE]</string>
    <string name="act_app_hacked_cloned_title">Oops… why did you do this :(</string>
    <string name="act_app_hacked_compromised_description">"Your actions violate the application policy. You mom won't like it!"</string>
    <string name="act_app_hacked_compromised_title">Oops… you are deceiver!</string>
    <string name="act_app_hacked_toolbar_title">We have caught you!</string>
    <string name="act_bundle_intro_action_done">Create</string>
    <string name="act_bundle_intro_slide_0_description">Use multiple accounts and switch between them in one click</string>
    <string name="act_bundle_intro_slide_0_title">Accounts bundle</string>
    <string name="act_bundle_intro_slide_1_description">Gain crystals using additional account and spend crystals on your primary one</string>
    <string name="act_bundle_intro_slide_1_title">Be clever</string>
    <string name="act_bundle_intro_slide_2_description">Transfer crystals between accounts in the same bundle with minimal commission</string>
    <string name="act_bundle_intro_slide_2_title">Save more</string>
    <string name="act_bundle_intro_slide_3_description">Create accounts bundle and become the best!</string>
    <string name="act_bundle_intro_slide_3_title">Start right now</string>
    <string name="act_comments_stub_description">This feature is being developed. We will notify you as soon as possible, stay tuned [emoji:WINKING_FACE]</string>
    <string name="act_comments_stub_title">Very soon!</string>
    <string name="act_comments_toolbar_title">Comments</string>
    <string name="act_dev_tools_toolbar_title">Dev-tools</string>
    <string name="act_extra_crystals_tab_0">Extra tasks</string>
    <string name="act_extra_crystals_tab_1">Gift code</string>
    <string name="act_extra_crystals_toolbar_title">Karma &amp; Crystals</string>
    <string name="act_extra_tasks_toolbar_title">Extra-tasks</string>
    <string name="act_gaining_counters_button_improve">Boost</string>
    <string name="act_gaining_counters_button_prolong">Prolong</string>
    <string name="act_gaining_counters_title_crystals">Crystals</string>
    <string name="act_gaining_counters_title_energy">Karma</string>
    <string name="act_gaining_counters_title_speed">Speed</string>
    <string name="act_gaining_menu_improve_background_work">Allow background work</string>
    <string name="act_gaining_menu_item_write_us">@string/write_us</string>
    <string name="app_terms_of_service_action">I accept the Terms Of Service</string>
    <string name="app_terms_of_service_description">" 1. By using the present application "<b>\"Igotop+\"</b>" (next - the Application), you get an opportunity to:
  1.1. use the Application services;
  1.2. buy electronic goods and/or services for further use within the Application;
  1.3. get help from technical support of the Application if you have any problems;
  1.4. get help if you have any problems from technical support Applications;

 2. The activities of this Application is aimed solely at ensuring the process of interaction between all interested parties (next - Users) for gaining points within the Application.

 3. The Application gives Users a number of the above functions, and makes no warranties of the speed and/or reliability of their execution.

 4. Using the Application by Users means, that the User agrees to these terms and conditions of the current User Agreement, and all amendments and/or additions.

 5. The Application reserves the right at its discretion to carry out any change and/or supplement of this User Agreement at any time without prior and/or subsequent notification to the User. The new version of the User Agreement comes into force from the moment of its placement in the Application.

 6. In case of disagreement of the User with any of the positions of the User Agreement, the User is not entitled to use the application. In case, if any changes were made by the Application to the User Agreement, with which the User does not agree, the latter is obliged to stop using the Application.

 7. This User Agreement is mandatory for all Users of the application.

 8. The creators of the Application (next - "<b>Igotop</b>") do NOT guarantee that the Application services will always be:
  8.1. corresponding to the User's expectations;
  8.2. uninterrupted;
  8.3. unmistakable;
  8.4. available to the User or operate stably;
  8.5. guaranteed to provide fast data transfer speed or/and the Application speed, as well as ensured of the absence of typographical errors;

 9. For its part, "<b>Igotop</b>" will make every possible effort to ensure the running of the above-mentioned properties of the application.

 10. "<b>Igotop</b>" is not liable, including, but not limited to, for any material or moral damages caused by the use of or inability to use, the user application, as well as for any consequences of unauthorized/unlawful third-party access to the User's authorization data (login, password), a computer or personal data of the latter.

 11. The Application is not a client of the Instagram. "<b>Igotop</b>" - separate, unofficial group of developers that is not part of the Instagram, not cooperating with the Instagram and is not carrying Responsibility for the policies and actions of the Instagram.

 12. Acceptance in accordance with the current legislation of any position of this User Agreement invalid or not enforceable does not entail invalidation of inapplicability of other positions of the User Agreement.

 13. In order to obtain an objective and consistent information in the Application, the User agrees to provide true, precise and complete information about himself as prompted in the feedback form and keep this information up to date.

 14. "<b>Igotop</b>" warn that in case of extremely automated processing of personal data they are not responsible for the accuracy and reliability of personal data entered by the User, for the User decisions and the legal consequences, arising in connection with those decisions.

 15. "<b>Igotop</b>" reserves the right to terminate the User's access to the services of the Application completely or partially, at any time, without explaining the reason.

 16. "<b>Igotop</b>" does not carry out any responsibility for the User's actions in the Application and for their consequences. "</string>
    <string name="app_terms_of_service_title">Terms Of Service</string>
    <string name="dlg_gift_code_reward_crystals">Crystals</string>
    <string name="dlg_gift_code_reward_karma">Karma</string>
    <string name="dlg_gift_code_reward_premium">Premium</string>
    <string name="dlg_gift_code_reward_slots">Slots</string>
    <string name="frf_attach_account_to_bundle_action_accept">OK</string>
    <string name="frf_attach_account_to_bundle_action_decline">Cancel</string>
    <string name="frf_attach_account_to_bundle_message">This account will be added to the bundle. You can change it any time.</string>
    <string name="frf_settings_pref_category_title_other">Other</string>
    <string name="frg_bundle_accounts_buy_slot_for_crystals_title">Take for</string>
    <string name="frg_gift_code_edt_hint">Enter here</string>
    <string name="frg_gift_code_links_header">Our social media</string>
    <string name="frg_gift_code_summary">"You can receive gift codes only in our social media. We publish gift codes on holidays, give them as prises in different contests or as a reward for active users. Follow our social networks and you won't miss them!"</string>
    <string name="frg_gift_code_title">Exchange gift codes for crystals, karma, slots…</string>
    <string name="frg_gift_code_use_action">Use the code</string>
    <string name="frg_settings_pref_category_title_account">Account</string>
    <string name="frg_settings_pref_item_app_version_title">App version</string>
    <string name="frg_settings_pref_item_clear_cookie_on_logout_summary">Do not use it if you do not know what is it</string>
    <string name="frg_settings_pref_item_clear_cookie_on_logout_title">Reset cookies while logout</string>
    <string name="frg_settings_pref_item_logout_all_summary">Application cache will be cleared</string>
    <string name="frg_settings_pref_item_logout_all_title">Logout all accounts</string>
    <string name="frg_settings_pref_item_reauth_all_summary">All app data will be refreshed</string>
    <string name="frg_settings_pref_item_reauth_all_title">Reauthenticate all accounts</string>
    <string name="frg_settings_pref_item_reset_system_cache_summary">Do not use it if you do not know what is it</string>
    <string name="frg_settings_pref_item_reset_system_cache_title">Reset constants</string>
    <string name="frg_sign_in_btn_contact_us">Login problems?</string>
    <string name="frg_sign_in_btn_sign_in">Sign in</string>
    <string name="frg_sign_in_logo_title_1">@string/application_name</string>
    <string name="frg_sign_in_logo_title_2">Everything you need</string>
    <string name="frg_sign_in_logo_title_3">In one click</string>
    <string name="ok">OK</string>
    <string name="roboto_bold">RobotoTTF/Roboto-Bold.ttf</string>
    <string name="roboto_light">RobotoTTF/Roboto-Light.ttf</string>
    <string name="roboto_medium">RobotoTTF/Roboto-Medium.ttf</string>
    <string name="roboto_regular">RobotoTTF/Roboto-Regular.ttf</string>
</resources>