<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="?colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/icon_image_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" app:srcCompat="@drawable/ic_big_add_account_150dp" />
    <com.catool.android.views.CatoolTextView android:textColor="#ffffffff" android:gravity="center" android:id="@id/message_text_view" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/frf_attach_account_to_bundle_message" app:text_view_font="@string/roboto_regular" />
    <FrameLayout android:id="@id/confirm_button_layout" android:background="@drawable/bg_rounded_side_accent_36dp" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_marginBottom="12.0dip">
        <com.catool.android.views.CatoolButton android:textColor="#ffffffff" android:gravity="center" android:id="@id/confirm_button" android:background="@drawable/btn_rounded_side_white_ripple_36dp" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/frf_attach_account_to_bundle_action_accept" app:button_font="@string/roboto_bold" />
    </FrameLayout>
    <com.catool.android.views.CatoolButton android:textColor="#80ffffff" android:id="@id/decline_button" android:background="@drawable/btn_rounded_side_white_ripple_36dp" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/frf_attach_account_to_bundle_action_decline" app:button_font="@string/roboto_light" />
</LinearLayout>