<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/rootLayout" android:background="?colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginBottom="16.0dip" android:layout_above="@id/bottom_layout" android:layout_centerHorizontal="true">
        <com.airbnb.lottie.LottieAnimationView android:layout_gravity="center_horizontal" android:id="@id/animated_logo_view" android:layout_width="wrap_content" android:layout_height="wrap_content" app:lottie_autoPlay="true" app:lottie_fileName="anim/ic_launcher.json" app:lottie_loop="true" />
        <LinearLayout android:gravity="left" android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <com.catool.android.views.CatoolTextView android:textSize="48.0sp" android:textColor="#ffffffff" android:id="@id/logo1TextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/frg_sign_in_logo_title_1" android:includeFontPadding="false" app:text_view_font="@string/roboto_bold" />
            <com.catool.android.views.CatoolTextView android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/logo2TextView" android:paddingLeft="2.5dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/frg_sign_in_logo_title_2" android:includeFontPadding="false" app:text_view_font="@string/roboto_regular" />
            <com.catool.android.views.CatoolTextView android:textSize="16.0sp" android:textColor="?colorAccent" android:id="@id/logo3TextView" android:paddingLeft="2.5dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/frg_sign_in_logo_title_3" android:includeFontPadding="false" app:text_view_font="@string/roboto_medium" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/bottom_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true">
        <com.catool.android.views.CatoolButton android:textSize="16.0sp" android:textColor="@color/grey_50" android:layout_gravity="center_horizontal" android:id="@id/signInButton" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginRight="18.0dip" android:layout_marginBottom="4.0dip" android:text="@string/frg_sign_in_btn_sign_in" app:button_font="@string/roboto_medium" app:theme="@style/ThemeOverlay.AppCompat.Dark" />
        <com.catool.android.views.CatoolTextView android:theme="@style/ThemeOverlay.AppCompat.Dark" android:textSize="14.0sp" android:textColor="#80ffffff" android:gravity="center|left" android:id="@id/contactUsTextView" android:background="?android:selectableItemBackground" android:paddingLeft="18.0dip" android:paddingTop="18.0dip" android:paddingRight="18.0dip" android:paddingBottom="18.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/frg_sign_in_btn_contact_us" android:drawablePadding="8.0dip" android:textAllCaps="false" app:text_view_font="@string/roboto_regular" />
    </LinearLayout>
</RelativeLayout>