<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:paddingTop="24.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:id="@id/focus_intercept_layout_2" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="0.0dip" />
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/logo_image_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/img_gift_code" />
        <com.catool.android.views.CatoolTextView android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/title_text_view" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/frg_gift_code_title" app:text_view_font="@string/roboto_bold" />
        <com.catool.android.views.CatoolTextView android:textSize="12.0sp" android:textColor="#80ffffff" android:gravity="center" android:id="@id/summary_text_view" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/frg_gift_code_summary" app:text_view_font="@string/roboto_regular" />
        <RelativeLayout android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="8.0dip">
            <EditText android:theme="@style/BlueAccentColorTheme" android:textSize="16.0sp" android:textColor="#ffffffff" android:textColorHint="#30ffffff" android:gravity="center|left" android:id="@id/gift_code_edit_text" android:scrollbars="none" android:layout_width="300.0dip" android:layout_height="48.0dip" android:hint="@string/frg_gift_code_edt_hint" android:maxLines="1" android:maxLength="256" android:layout_centerVertical="true" android:inputType="textPersonName" android:paddingStart="16.0dip" android:paddingEnd="100.0dip" android:layout_alignParentStart="true" />
            <ImageButton android:id="@id/clear_image_button" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="8.0dip" android:layout_toStartOf="@id/paste_image_button" app:srcCompat="@drawable/ic_clear_white_24dp" />
            <ImageButton android:id="@id/paste_image_button" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="8.0dip" android:layout_alignParentEnd="true" app:srcCompat="@drawable/ic_paste_white_24dp" />
        </RelativeLayout>
        <com.catool.android.views.CatoolButton android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/use_gift_code_button" android:layout_width="300.0dip" android:layout_height="wrap_content" android:text="@string/frg_gift_code_use_action" app:button_font="@string/roboto_medium" />
        <com.catool.android.views.CatoolTextView android:textSize="12.0sp" android:textColor="#80ffffff" android:gravity="center" android:id="@id/networks_header_view" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="8.0dip" android:text="@string/frg_gift_code_links_header" android:textAllCaps="true" app:text_view_font="@string/roboto_bold" />
        <LinearLayout android:orientation="horizontal" android:id="@id/links_layout" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageButton android:id="@id/telegram_link_view" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_menu_telegram_24dp" />
            <ImageButton android:id="@id/vk_link_view" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_menu_vk_24dp" />
            <ImageButton android:id="@id/twitter_link_view" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_menu_twitter_24dp" />
            <ImageButton android:id="@id/facebook_link_view" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_menu_facebook_24dp" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/focus_intercept_layout" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="0.0dip" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>