<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/primary_dark" android:layout_width="300.0dip" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="start|center" android:orientation="vertical" android:id="@id/card_0_0_layout" android:layout_width="120.0dip" android:layout_height="90.0dip" android:layout_marginTop="36.0dip" android:paddingStart="16.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toStartOf="@id/guideline6" app:layout_constraintTop_toBottomOf="@id/subtitle_text_view">
        <com.catool.android.views.CatoolTextView android:textSize="28.0sp" android:id="@id/crystals_text_view" android:paddingBottom="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:includeFontPadding="false" app:text_view_font="@string/roboto_medium" />
        <com.catool.android.views.CatoolTextView android:textSize="12.0sp" android:id="@id/crystals_title_text_view" android:paddingTop="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dlg_gift_code_reward_crystals" android:includeFontPadding="false" android:textAllCaps="true" app:text_view_font="@string/roboto_light" />
    </LinearLayout>
    <LinearLayout android:gravity="start|center" android:orientation="vertical" android:id="@id/card_0_1_layout" android:layout_width="120.0dip" android:layout_height="90.0dip" android:paddingStart="16.0dip" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="@id/guideline6" app:layout_constraintTop_toTopOf="@id/card_0_0_layout">
        <com.catool.android.views.CatoolTextView android:textSize="28.0sp" android:id="@id/karma_text_view" android:paddingBottom="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:includeFontPadding="false" app:text_view_font="@string/roboto_medium" />
        <com.catool.android.views.CatoolTextView android:textSize="12.0sp" android:id="@id/karma_title_text_view" android:paddingTop="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dlg_gift_code_reward_karma" android:includeFontPadding="false" android:textAllCaps="true" app:text_view_font="@string/roboto_light" />
    </LinearLayout>
    <LinearLayout android:gravity="start|center" android:orientation="vertical" android:id="@id/card_1_0_layout" android:layout_width="120.0dip" android:layout_height="90.0dip" android:layout_marginTop="16.0dip" android:paddingStart="16.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toStartOf="@id/guideline6" app:layout_constraintTop_toBottomOf="@id/card_0_0_layout">
        <com.catool.android.views.CatoolTextView android:textSize="28.0sp" android:id="@id/slots_text_view" android:paddingBottom="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:includeFontPadding="false" app:text_view_font="@string/roboto_medium" />
        <com.catool.android.views.CatoolTextView android:textSize="12.0sp" android:id="@id/slots_title_text_view" android:paddingTop="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dlg_gift_code_reward_slots" android:includeFontPadding="false" android:textAllCaps="true" app:text_view_font="@string/roboto_light" />
    </LinearLayout>
    <LinearLayout android:gravity="start|center" android:orientation="vertical" android:id="@id/card_1_1_layout" android:layout_width="120.0dip" android:layout_height="90.0dip" android:paddingStart="16.0dip" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="@id/guideline6" app:layout_constraintTop_toTopOf="@id/card_1_0_layout">
        <com.catool.android.views.CatoolTextView android:textSize="28.0sp" android:id="@id/premium_text_view" android:paddingBottom="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0d" android:includeFontPadding="false" app:text_view_font="@string/roboto_medium" />
        <com.catool.android.views.CatoolTextView android:textSize="12.0sp" android:id="@id/premium_title_text_view" android:paddingTop="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dlg_gift_code_reward_premium" android:includeFontPadding="false" android:textAllCaps="true" app:text_view_font="@string/roboto_light" />
    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline6" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5" />
    <com.catool.android.views.CatoolTextView android:textSize="24.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/title_text_view" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:text_view_font="@string/roboto_bold" />
    <com.catool.android.views.CatoolTextView android:textSize="14.0sp" android:textColor="#80ffffff" android:gravity="center" android:id="@id/subtitle_text_view" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title_text_view" app:text_view_font="@string/roboto_regular" />
    <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/ok_image_button" android:layout_width="300.0dip" android:layout_height="48.0dip" android:layout_marginTop="24.0dip" android:text="@string/ok" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/card_1_0_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>